--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     image: php:8.2-apache
     ports:
       - "80:80"
+    user: "${UID}:${GID}"
     volumes:
       - ./src:/var/www/html
     depends_on:
