--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,12 @@ services:
       MYSQL_PASSWORD: password
     volumes:
       - ./mysql_data:/var/lib/mysql
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: password
+    depends_on:
+      - mysql
